syntax = "proto3";
import "discovery.proto";

option csharp_namespace = "Sail.Grpc";

package sail.api.v1;

service RouteDiscoveryService {
  rpc StreamRoutes(stream DiscoveryRequest) returns (stream DiscoveryResponse) {
  }
}